# untitled

./: CMakeLists-exe.txt  CMakeLists-ext-plan.txt  CMakeLists-lib.txt  CMakeLists.txt  sequence_plan.cpp
compare_length/: compare_length.cxx  compare_length.h  compare_length.i  compare_length_wrap.cxx  l2.h
example/: example.cpp  example.h  example_wrap.cxx
include/: sequence_plan.h  sequence_plan2.h
l2/: build.sh  l2.cpp
sequence_plan/: main.cpp  sequence_plan.cpp  sequence_plan.h  sequence_plan.i  sequence_plan_wrap.cxx
src/: compute_functions.cc  sequence_plan.cpp  sequence_plan.h  sequence_plan2.cpp  sequence_plan3.cpp  simple_acero.cc
src-c/: main.c  sequence_plan2.cpp
src-example/: arrow_example.cc
src-export32/: example.cpp  example.h  main.c
src-gtest/: main.cpp  main.h
src-import-acero/: arrow_calculation.cpp  arrow_calculation.h
src-mytest/: arrow_utils.cpp  arrow_utils.h  main.cpp
src-test/: bridge_test.cc
src3/: compute_and_write_csv_example.cc  parquet_read_write.cc
src_share_point/: example.cpp  main.c
